Fixed overflow scrolling issue

--- a/src/components/CardArea.css
+++ b/src/components/CardArea.css
@@ -2,8 +2,9 @@
   display: flex;
  flex-direction: row;
  flex-flow: row wrap;
-  margin-top: 200px;
-  }
+ position: relative; 
+ top: 65px ;
+    }
 
 .title {
     font-size: 20pt;
