--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,4 +4,5 @@ footer {
   font-size: 11pt;
   color: #336bf2;
   font-family: customHelvetica;
+  margin-top: 65px;
  }
